welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:1: error: not found: type int
def suiteGolomb (num:int) {
                     ^golomb:14: warning: enclosing method suiteGolomb has result type Unit: return value discarded
  return tab
  ^golomb:17: error: Unit does not take parameters
  return (suiteGolomb(num))(num)
                           ^